Add graduate pics

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <main>
     <article class="testimonial dan">
       <div class="person">
+        <img src="images/image-daniel.jpg" alt="mugshot of Daniel Clifford"
+                                           class="mugshot" />
         <p class="name">Daniel Clifford</p>
         <p>Verified Graduate</p>
       </div>
@@ -42,6 +44,8 @@
 
     <article class="testimonial jon">
       <div class="person">
+        <img src="images/image-jonathan.jpg" alt="mugshot of Jonathan Walters"
+                                           class="mugshot" />
         <p class="name">Jonathan Walters</p>
         <p>Verified Graduate</p>
       </div>
@@ -58,6 +62,8 @@
 
     <article class="testimonial jean">
       <div class="person">
+        <img src="images/image-jeanette.jpg" alt="mugshot of Jeanette Harmon"
+                                           class="mugshot" />
         <p class="name">Jeanette Harmon</p>
         <p>Verified Graduate</p>
       </div>
@@ -74,6 +80,8 @@
 
     <article class="testimonial pat">
       <div class="person">
+        <img src="images/image-patrick.jpg" alt="mugshot of Patrick Abrams"
+                                           class="mugshot" />
         <p class="name">Patrick Abrams</p>
         <p>Verified Graduate</p>
       </div>
@@ -93,6 +101,8 @@
 
     <article class="testimonial kira">
       <div class="person">
+        <img src="images/image-kira.jpg" alt="mugshot of Kira Whittle"
+                                           class="mugshot" />
         <p class="name">Kira Whittle</p>
         <p>Verified Graduate</p>
       </div>
