--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Testimonials Grid Section</title>
 </head>
 <body>
+  <header>
+    <h1>Testimonials for our course</h1>
+  </header>
   <main>
     <article class="testimonial dan">
       <div class="person">
@@ -27,13 +30,13 @@
       in the company I joined. I honestly feel I got every penny’s worth.
       </p>
 
-      <p class="quote">
+      <blockquote class="quote">
       “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
       transition and have heard some people who had an amazing experience here. I signed up 
       for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
       The next 12 weeks was the best - and most grueling - time of my life. Since completing 
       the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-      </p>
+      </blockquote>
     </article>
 
     <article class="testimonial jon">
@@ -48,10 +51,10 @@
       The team was very supportive and kept me motivated
       </p>
 
-      <p class="quote">
+      <blockquote class="quote">
       “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
       for a big company. This was one of the best investments I’ve made in myself. ”
-      </p>
+      </blockquote>
     </article>
 
     <article class="testimonial jean">
@@ -66,10 +69,10 @@
       An overall wonderful and rewarding experience
       </p>
 
-      <p class="quote">
+      <blockquote class="quote">
       “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
       while doing something I love. ”
-      </p>
+      </blockquote>
     </article>
 
     <article class="testimonial pat">
@@ -85,12 +88,12 @@
       learning from their experiences was easy.
       </p>
 
-      <p class="quote">
+      <blockquote class="quote">
       “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
       gave me the confidence necessary to be able to go out in the world and present myself as a capable 
       junior developer. The standard is above the rest. You will get the personal attention you need from 
       an incredible community of smart and amazing people. ”
-      </p>
+      </blockquote>
     </article>
 
     <article class="testimonial kira">
@@ -105,7 +108,7 @@
       Such a life-changing experience. Highly recommended!
       </p>
 
-      <p class="quote">
+      <blockquote class="quote">
       “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
       professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
       student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
@@ -114,7 +117,7 @@
       could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
       experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
       100% recommend! ”
-      </p>
+      </blockquote>
     </article>
   </main>
   
